tech stuff update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td> <img src="images/Deepak(1).png" alt="Deepak's Profile Photo"></td>
+      <td> <img src="Deepak(1).png" alt="Deepak's Profile Photo"></td>
       <td>
         <p><em>
             <h1>Deepak Dayma</h1>
@@ -34,7 +34,25 @@
     <li>Travelling.</li>
     <li>Hanging out with my Friends.</li>
   </ol>
-  
+  <hr>
+  <h3>My Tech Stuff</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Device</th>
+        <th>Model</th>
+      </tr>
+    </thead>
+
+    <body>
+      <tr>
+        <td>Phone</td>
+        <td>iPhone 12 mini</td>
+      </tr>
+      <tr>
+        <td>Laptop</td>
+        <td>MacBook Air M1</td>
+      </tr>
     </body>
   </table>
   <hr>
@@ -50,7 +68,7 @@
           </tr>
           <tr>
             <td>DSA</td>
-            <td>⭐️⭐️⭐️</td>
+            <td>⭐️⭐️</td>
 
           </tr>
         </table>
@@ -60,7 +78,7 @@
           <tr>
 
             <td>Web development</td>
-            <td>⭐️⭐️⭐</td>
+            <td>⭐️⭐️</td>
           </tr>
           <tr>
 
