--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td> <img src="Deepak(1).png" alt="images/Deepak's Profile Photo"></td>
+      <td> <img src="images/Deepak(1).png" alt="Deepak's Profile Photo"></td>
       <td>
         <p><em>
             <h1>Deepak Dayma</h1>
